# WebSentinel-AI

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.sh  scan.sh  start.sh
.github/workflows/: ci.yml
src/ai/: attack_path.py  chat.py  enricher.py  ollama.py
src/api/: auth.py  database.py  db_models.py  main.py
src/api/static/: dashboard.html
src/cli/: main.py
src/gui/: main.py
src/orchestrator/: pipeline.py
src/scanner/: comprehensive.py  engine.py  models.py  noir.py  reporter.py
src/scanner/checks/: base.py  cookies.py  cve.py  directories.py  dns.py  headers.py  network.py  ports.py  sqli.py  ssl.py  subdomains.py  tech.py  wifi.py  xss.py
tests/: conftest.py  test_api.py  test_cli.py  test_engine.py  test_gui.py  test_reporter.py
tests/test_checks/: test_cookies.py  test_directories.py  test_headers.py  test_ports.py  test_sqli.py  test_ssl.py  test_xss.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/components/: AIChat.tsx  DashboardCard.tsx  FindingAccordion.tsx  ProgressBar.tsx  StatCard.tsx
web/src/hooks/: useAuthFetch.ts  useWebSocket.ts
web/src/layouts/: DashboardLayout.tsx
web/src/pages/: Dashboard.tsx  Findings.tsx  Landing.tsx  LinkScan.tsx  Login.tsx  NetworkScan.tsx  NoirAudit.tsx  Pipeline.tsx  WebScan.tsx
web/src/stores/: authStore.ts  scanStore.ts
