[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websentinel-ai"
version = "0.3.0"
description = "AI-Powered Web Vulnerability Scanner & Remediation Platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-python-jose",
    "FreeSimpleGUI>=0.43",
    "dnspython>=2.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.scripts]
websentinel = "src.cli.main:main"
websentinel-gui = "src.gui.main:main"

[project.urls]
Repository = "https://github.com/galeanojuan2577/WebSentinel-AI"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"src/scanner/noir.py" = ["E501"]
"src/scanner/reporter.py" = ["E501"]
"src/api/main.py" = ["E501"]
"src/ai/ollama.py" = ["E501"]
"src/scanner/checks/*.py" = ["E501"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
